--- a/index.html
+++ b/index.html
@@ -137,20 +137,20 @@ p{
 <script>
 
 const images = [
-    "images/1.jpg",
-    "images/2.jpg",
-    "images/3.jpg",
-    "images/4.jpg",
-    "images/5.jpg",
-    "images/6.jpg",
-    "images/7.jpg",
-    "images/8.jpg",
-    "images/9.jpg",
-    "images/10.jpg",
-    "images/11.jpg",
-    "images/12.jpg",
-    "images/13.jpg",
-    "images/14.jpg"
+<img src="1.jpg">
+<img src="2.jpg">
+<img src="3.jpg">
+<img src="4.jpg">
+<img src="5.jpg">
+<img src="6.jpg">
+<img src="7.jpg">
+<img src="8.jpg">
+<img src="9.jpg">
+<img src="10.jpg">
+<img src="11.jpg">
+<img src="12.jpg">
+<img src="13.jpg">
+<img src="14.jpg">
 ];
 
 const slidesContainer = document.getElementById("slides");
@@ -214,3 +214,4 @@ document.body.addEventListener("click", function(){
 
 </body>
 </html>
+
